[gd_scene load_steps=7 format=3 uid="uid://ci6v0e53ghr2x"]

[ext_resource type="Texture2D" uid="uid://b6riue372j51h" path="res://scenes/creatures/sprites/GoatboyBodyCollar_.png" id="1_0rqk6"]
[ext_resource type="Script" uid="uid://d0a2x427afrf2" path="res://scripts/collar_main.gd" id="2_51s5m"]
[ext_resource type="Script" uid="uid://bnsifr8s84b78" path="res://scripts/collar_script_gov1.gd" id="3_757im"]
[ext_resource type="PackedScene" uid="uid://b8aade3wuo16m" path="res://scenes/projectiles/info_projectile.tscn" id="4_ug2k4"]
[ext_resource type="Script" uid="uid://cuwyutmicqngp" path="res://scripts/creature_control_collar.gd" id="5_q1w5k"]
[ext_resource type="Script" uid="uid://b0efcjn36kkp6" path="res://scripts/collar_ui.gd" id="6_51s5m"]

[node name="GoatboyCollarActual" type="Sprite2D"]
scale = Vector2(0.831172, 0.831172)
texture = ExtResource("1_0rqk6")
script = ExtResource("2_51s5m")

[node name="ControlSystem" type="Node2D" parent="."]
position = Vector2(24.8925, 11.7889)
rotation = -1.61271
scale = Vector2(6.38941, 6.38941)
script = ExtResource("3_757im")
laser_scene = ExtResource("4_ug2k4")

[node name="CollarCreatureControl" type="Node2D" parent="."]
position = Vector2(24.8925, 11.7889)
rotation = -1.61271
scale = Vector2(6.38941, 6.38941)
script = ExtResource("5_q1w5k")

[node name="CollarUIManager" type="Node2D" parent="."]
script = ExtResource("6_51s5m")
